--- a/EN/Certificate.html
+++ b/EN/Certificate.html
@@ -74,6 +74,7 @@
                             <p class="lead"><a href="../certificate/多益金色證書202003 200K.jpg">TOEIC Gold Certificate</a></p>
                             <p class="lead"><a href="../certificate/交通大學工業工程碩士畢業證書.pdf">NCTU Master's Degree Certificate in Industrial Engineering and Management</a></p>
                             <p class="lead"><a href="../certificate/交通大學工業工程學士畢業證書.pdf">NCTU Bachelor's Degree Certificate in Industrial Engineering and Management</a></p>
+                            <p class="lead"><a href="../certificate/AWS證書_龔慕祥.pdf">AWSOME DAY ONLINE CONFERENCE</a></p>
                             <p class="lead"><a href="../certificate/【竹科管理局免費課程】AR-VR在智慧機械的展場設計 電子上課證明.pdf">【Hsinchu Science Park Bureau】AR-VR in Smart Machinery Exhibition Design</a></p>
                             <p class="lead"><a href="../certificate/【竹科管理局免費課程】製程精進與品質管理 電子上課證明.pdf">【Hsinchu Science Park Bureau】Process Improvement and Quality Management</a></p>
                             <p class="lead"><a href="../certificate/【竹科管理局免費講座】行動物聯網發展與應用 電子上課證明.pdf">【Hsinchu Science Park Bureau】Development and Applications of Mobile Internet of Things (IoT)</a></p>
