--- a/project.html
+++ b/project.html
@@ -56,6 +56,7 @@
                         <div class="col-md-12">
                             <h3>我的專案</h3>
                             <p class="lead"><a href="https://dannyk1003.github.io/Smart_Evaluation_System_for_Video_Game_User_Voting/">電子遊戲用戶評價之智慧評估系統</a></p>
+                            <p class="lead"><a href="certificate/電腦視覺專案實作.pdf">電腦視覺專案實作</a></p>
                         </div>
                     </div>
                 </div>
