--- a/Certificate.html
+++ b/Certificate.html
@@ -71,6 +71,7 @@
                         <div class="col-md-12">
                             <h3>證明</h3>
                             <p class="lead"><a href="certificate/Python人工智慧與資料科學人才養成班第02期結訓證書.pdf">Python人工智慧與資料科學人才養成班第02期結訓證書</a></p>
+                            <p class="lead"><a href="https://hahow.in/certificates/648ac470d3a485c2ee90586c">學習 AI 一把抓：點亮人工智慧技能樹</a></p>
                             <p class="lead"><a href="certificate/多益金色證書202003 200K.jpg">多益金色證書</a></p>
                             <p class="lead"><a href="certificate/交通大學工業工程碩士畢業證書.pdf">交通大學工業工程與管理碩士畢業證書</a></p>
                             <p class="lead"><a href="certificate/交通大學工業工程學士畢業證書.pdf">交通大學工業工程與管理學士畢業證書</a></p>
