--- a/EN/Certificate.html
+++ b/EN/Certificate.html
@@ -71,6 +71,7 @@
                         <div class="col-md-12">
                             <h3>Certificate</h3>
                             <p class="lead"><a href="../certificate/Python人工智慧與資料科學人才養成班第02期結訓證書.pdf">Python AI and data science Development Program completion certificate</a></p>
+                            <p class="lead"><a href="https://hahow.in/certificates/648ac470d3a485c2ee90586c">Learning AI : Light up the AI skill tree</a></p>
                             <p class="lead"><a href="../certificate/多益金色證書202003 200K.jpg">TOEIC Gold Certificate</a></p>
                             <p class="lead"><a href="../certificate/交通大學工業工程碩士畢業證書.pdf">NCTU Master's Degree Certificate in Industrial Engineering and Management</a></p>
                             <p class="lead"><a href="../certificate/交通大學工業工程學士畢業證書.pdf">NCTU Bachelor's Degree Certificate in Industrial Engineering and Management</a></p>
